Change mail text

--- a/src/main/resources/templates/confirmRegistration.html
+++ b/src/main/resources/templates/confirmRegistration.html
@@ -29,7 +29,7 @@
     </tr>
     <tr>
         <td>
-            С уважением, служба поддержки tonkoslovie.ru
+            С уважением, команда tonkoslovie.ru
         </td>
     </tr>
 </table>
